fixed bottom spacing gap

--- a/app/assets/stylesheets/pages/_my_items.scss
+++ b/app/assets/stylesheets/pages/_my_items.scss
@@ -131,7 +131,7 @@
 .my-items-container {
   background-image: url('logo_background/list_background.png');
   background-size: contain;
-  background-position: center 82%;
+  background-position: bottom;
   background-repeat: no-repeat;
   padding: 20px;
   min-height: 100vh;
